# stapel-gdpr

./: CHANGELOG.md  CONTRIBUTING.md  MODULE.md  README.md  SECURITY.md  __init__.py  actions.py  admin.py  apps.py  conf.py  conftest.py  dto.py  errors.py  models.py  orchestrator.py  orchestrator.py.bak  pyproject.toml  reregistration.py  serializers.py  tasks.py  urls.py  views.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml
docs/: capabilities.json
management/commands/: consume_gdpr_completions.py
migrations/: 0001_initial.py
schemas/emits/: user.deleted.json  user.export_ready.json
tests/: test_api.py  test_closure.py  test_consumer.py  test_export.py  test_orchestrator_edge.py  test_public_api.py  test_tasks.py  test_views_edge.py  urls.py
