[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stapel-gdpr"
version = "0.3.1"
description = "GDPR data export and account deletion Django app for the Stapel framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "stapel", "gdpr", "privacy", "data-export", "right-to-erasure"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "stapel-core>=0.3.0,<0.4",
    "celery>=5.3",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]       # for S3-backed staging in microservices mode
all = ["stapel-gdpr[s3]"]

[tool.setuptools]
package-dir = {"stapel_gdpr" = "."}
packages = [
    "stapel_gdpr",
    "stapel_gdpr.migrations",
    "stapel_gdpr.management",
    "stapel_gdpr.management.commands",
]

[tool.setuptools.package-data]
stapel_gdpr = ["py.typed", "migrations/*.py", "schemas/**/*.json", "migrations/**/*.py"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/migrations/*",
]

